--- a/src/app/update-notification-settings/update-notification-settings.component.html
+++ b/src/app/update-notification-settings/update-notification-settings.component.html
@@ -4,8 +4,8 @@
     <div class="form-group">
       <label for="ecLastHourThreshold" class="form-label">
         <div class="form-check form-switch">
-          <input class="form-check-input" type="checkbox" role="switch" id="enableEcChangeNotifications" [(ngModel)]="areEcChangeNotificationsEnabled">
-          <label class="form-check-label settings-modal-text bigger-text" for="enableEcChangeNotifications" style="display: inline">
+          <input class="form-check-input" type="checkbox" role="switch" id="enableCurrentEcChangeNotifications" [(ngModel)]="areCurrentEcChangeNotificationsEnabled">
+          <label class="form-check-label settings-modal-text bigger-text" for="enableCurrentEcChangeNotifications" style="display: inline">
             Notify when the current EC drops below
           </label>
         </div>
@@ -22,12 +22,46 @@
           [(ngModel)]="newEcLastHourThreshold"
         >
         <label>
-          <select class="form-select custom-select dropdown" [(ngModel)]="selectedCapacityDenominator">
+          <select class="form-select custom-select dropdown" [(ngModel)]="selectedCurrentEcCapacityDenominator">
             <option *ngFor="let denominator of possibleCapacityDenominators" [value]="denominator">{{denominator}}</option>
           </select>
         </label>
         <div id="ecLastHourThresholdFeedback" class="invalid-feedback">
           The current EC threshold must be a number greater than or equal to 0.
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+<div class="row mt-3">
+  <div class="col-12">
+    <div class="form-group">
+      <label for="ecLastHourThreshold" class="form-label">
+        <div class="form-check form-switch">
+          <input class="form-check-input" type="checkbox" role="switch" id="enableAverageEcChangeNotifications" [(ngModel)]="areAverageEcChangeNotificationsEnabled">
+          <label class="form-check-label settings-modal-text bigger-text" for="enableAverageEcChangeNotifications" style="display: inline">
+            Notify when the average EC drops below
+          </label>
+        </div>
+      </label>
+      <div class="input-group">
+        <input
+          type="number"
+          class="form-control"
+          id="averageEcThreshold"
+          aria-describedby="averageEcThresholdFeedback"
+          [placeholder]="currentAverageEcThreshold"
+          [min]="0"
+          [class.is-invalid]="!isValidAverageEcThreshold"
+          [(ngModel)]="newAverageEcThreshold"
+        >
+        <label>
+          <select class="form-select custom-select dropdown" [(ngModel)]="selectedAverageEcCapacityDenominator">
+            <option *ngFor="let denominator of possibleCapacityDenominators" [value]="denominator">{{denominator}}</option>
+          </select>
+        </label>
+        <div id="averageEcThresholdFeedback" class="invalid-feedback">
+          The average EC threshold must be a number greater than or equal to 0.
         </div>
       </div>
     </div>
