Add note about telegram notification subscribing

--- a/src/app/update-harvester-notification-settings/update-harvester-notification-settings.component.html
+++ b/src/app/update-harvester-notification-settings/update-harvester-notification-settings.component.html
@@ -19,7 +19,7 @@
 <div class="row mt-4">
   <div class="col-12" >
     <div class="alert alert-info bigger-text" role="alert">
-      You can subscribe and unsubscribe to your accounts notification using your discord account by using the corresponding slash command:<br>
+      You can subscribe and unsubscribe to your accounts notification using your Discord or Telegram account by using the corresponding slash command:<br>
       <code>/subscribe-to-notifications</code><br>
       or <code>/unsubscribe-from-notifications</code>
     </div>
