--- a/src/app/harvester-card/harvester-card.component.html
+++ b/src/app/harvester-card/harvester-card.component.html
@@ -130,6 +130,13 @@
           [versionUpdateInfo]="foxyFarmerVersionUpdateInfo"
         ></app-version-info>
       </div>
+      <div class="col-6 col-sm-6 col-md-4 col-lg-3 col-xl col-xxl col-xxxl col-xxxxl col-xxxxxl p-1" *ngIf="hasFoxyGhFarmerVersion">
+        <app-version-info
+          versionName="Foxy-GH-Farmer Version"
+          [versionString]="foxyGhFarmerVersion"
+          [versionUpdateInfo]="foxyGhFarmerVersionUpdateInfo"
+        ></app-version-info>
+      </div>
     </div>
     <div class="row" *ngIf="showSharesChart | async">
       <div class="col-12">
