Link to notifications guide

--- a/src/app/update-harvester-notification-settings/update-harvester-notification-settings.component.html
+++ b/src/app/update-harvester-notification-settings/update-harvester-notification-settings.component.html
@@ -19,10 +19,7 @@
 <div class="row mt-4">
   <div class="col-12" >
     <div class="alert alert-info bigger-text" role="alert">
-      You can subscribe and unsubscribe to your accounts notification using your Discord or Telegram account by using the corresponding slash command:<br>
-      <code>/subscribe-to-notifications</code><br>
-      or <code>/unsubscribe-from-notifications</code>
-    </div>
+      You can subscribe and unsubscribe to your accounts notification using your Discord or Telegram account, see <a href="https://docs.foxypool.io/proof-of-spacetime/guides/subscribing-to-notifications/" target="_blank">this guide</a> on how to do that.
   </div>
 </div>
 <div class="row mt-2">
