--- a/src/app/update-notification-settings/update-notification-settings.component.html
+++ b/src/app/update-notification-settings/update-notification-settings.component.html
@@ -107,9 +107,7 @@
 <div class="row">
   <div class="col-12" >
     <div class="alert alert-info" role="alert" style="font-size: 1.1rem">
-      You can subscribe and unsubscribe to your accounts notification using your Discord or Telegram account by using the corresponding slash command:<br>
-      <code>/subscribe-to-notifications</code><br>
-      or <code>/unsubscribe-from-notifications</code>
+      You can subscribe and unsubscribe to your accounts notification using your Discord or Telegram account, see <a href="https://docs.foxypool.io/proof-of-spacetime/guides/subscribing-to-notifications/" target="_blank">this guide</a> on how to do that.
     </div>
   </div>
 </div>
