Use dark theme colors for charts

--- a/src/app/info/info.component.html
+++ b/src/app/info/info.component.html
@@ -48,7 +48,7 @@
     </div>
   </div>
   <div class="col-auto">
-    <div echarts [options]="clientVersionsChartOptions" [merge]="clientVersionsChartUpdateOptions" theme="default" class="client-version-chart"></div>
+    <div echarts [options]="clientVersionsChartOptions" [merge]="clientVersionsChartUpdateOptions" [theme]="chartTheme" class="client-version-chart"></div>
   </div>
   <div class="col-auto">
     <h5>Chart Mode</h5>
