--- a/src/app/stats-card/stats-card.component.html
+++ b/src/app/stats-card/stats-card.component.html
@@ -1,5 +1,5 @@
 <div class="row">
-  <div class="col-sm-6 col-md-3 col-lg-6 col-xxxl-7 small-col-padding">
+  <div class="col-6 col-sm-6 col-md-3 col-lg-6 col-xxxl-7 small-col-padding">
     <div class="card">
       <div class="card-header card-text-medium card-header-large">
         {{snippetService.getSnippet('stats-card-component.current-effort')}}
@@ -18,7 +18,7 @@
       </div>
     </div>
   </div>
-  <div class="col-sm-6 col-md-3 col-lg-6 col-xxxl-7 small-col-padding">
+  <div class="col-6 col-sm-6 col-md-3 col-lg-6 col-xxxl-7 small-col-padding">
     <div class="card">
       <div class="card-header card-text-medium card-header-large">
         {{snippetService.getSnippet('stats-card-component.average-effort')}}
@@ -37,7 +37,7 @@
       </div>
     </div>
   </div>
-  <div class="col-sm-12 col-md-6 col-lg-6 col-xxxl-10 small-col-padding">
+  <div class="col-12 col-sm-12 col-md-6 col-lg-6 col-xxxl-10 small-col-padding">
     <div class="card">
       <div class="card-header card-text-medium card-header-large">
         {{snippetService.getSnippet('stats-card-component.daily-reward')}}
@@ -56,7 +56,7 @@
       </div>
     </div>
   </div>
-  <div class="col-sm-6 col-md-2 col-lg-3 col-xxxl-5 small-col-padding order-lg-1 order-xxxl-0">
+  <div class="col-6 col-sm-6 col-md-2 col-lg-3 col-xxxl-5 small-col-padding order-lg-1 order-xxxl-0">
     <div class="card">
       <div class="card-header card-text-medium card-header-large">
         {{snippetService.getSnippet('stats-card-component.farmers')}}
@@ -69,7 +69,7 @@
       </div>
     </div>
   </div>
-  <div class="col-sm-6 col-md-3 col-lg-6 col-xxxl-6 small-col-padding order-lg-0 order-xxxl-1">
+  <div class="col-6 col-sm-6 col-md-3 col-lg-6 col-xxxl-6 small-col-padding order-lg-0 order-xxxl-1">
     <div class="card">
       <div class="card-header card-text-medium card-header-large">
         {{snippetService.getSnippet('stats-card-component.pool-ec')}}
@@ -82,7 +82,7 @@
       </div>
     </div>
   </div>
-  <div class="col-sm-6 col-md-3 col-lg-3 col-xxxl-6 small-col-padding order-lg-2">
+  <div class="col-6 col-sm-6 col-md-3 col-lg-3 col-xxxl-6 small-col-padding order-lg-2">
     <div class="card">
       <div class="card-header card-text-medium card-header-large">
         {{snippetService.getSnippet('stats-card-component.height')}}
@@ -95,7 +95,7 @@
       </div>
     </div>
   </div>
-  <div class="col-sm-6 col-md-4 col-lg-6 col-xxxl-7 small-col-padding order-lg-3">
+  <div class="col-6 col-sm-6 col-md-4 col-lg-6 col-xxxl-7 small-col-padding order-lg-3">
     <div class="card">
       <div class="card-header card-text-medium card-header-large">
         {{snippetService.getSnippet('stats-card-component.network-capacity')}}
