--- a/src/app/events/events.component.html
+++ b/src/app/events/events.component.html
@@ -4,7 +4,7 @@
       {{snippetService.getSnippet('events-component.title')}}:
     </h4>
     <div class="row">
-      <div *ngFor="let event of events$ | async" style="padding: 0.5em;">
+      <div class="col-auto" *ngFor="let event of events$ | async" style="padding: 0.5em;">
         <div class="card" *ngIf="event.type === EventType.extraBlockReward">
           <div class="card-header">
             {{snippetService.getSnippet('events-component.extra-block-reward.title')}}
