Update supported plots

--- a/src/app/info/info.component.html
+++ b/src/app/info/info.component.html
@@ -17,7 +17,7 @@
     <div>
       <ul>
         <li *ngIf="supportsCompressedPlots" style="list-style: none">
-          <fa-icon [icon]="faCheck" class="color-green"></fa-icon> Compressed Bladebit and Gigahorse plots are supported
+          <fa-icon [icon]="faCheck" class="color-green"></fa-icon> Compressed Bladebit, Gigahorse and DrPlotter plots are supported
         </li>
         <li style="list-style: none">
           <fa-icon [icon]="faCheck" class="color-green"></fa-icon> Light farmers available:
