--- a/src/app/harvester-card/harvester-card.component.html
+++ b/src/app/harvester-card/harvester-card.component.html
@@ -123,6 +123,13 @@
           [versionUpdateInfo]="gigahorseVersionUpdateInfo"
         ></app-version-info>
       </div>
+      <div class="col-6 col-sm-6 col-md-4 col-lg-3 col-xl col-xxl col-xxxl col-xxxxl col-xxxxxl p-1" *ngIf="hasDrPlotterVersion">
+        <app-version-info
+          versionName="DrPlotter Version"
+          [versionString]="drPlotterVersion"
+          [versionUpdateInfo]="drPlotterVersionUpdateInfo"
+        ></app-version-info>
+      </div>
       <div class="col-6 col-sm-6 col-md-4 col-lg-3 col-xl col-xxl col-xxxl col-xxxxl col-xxxxxl p-1" *ngIf="hasFoxyFarmerVersion">
         <app-version-info
           versionName="Foxy-Farmer Version"
