Fix name of won blocks state column

--- a/src/app/blocks-won/blocks-won.component.html
+++ b/src/app/blocks-won/blocks-won.component.html
@@ -19,7 +19,7 @@
         <th scope="col">{{snippetService.getSnippet('blocks-won-component.header.effort')}}</th>
         <th scope="col">{{snippetService.getSnippet('blocks-won-component.header.winner')}}</th>
         <th scope="col">{{snippetService.getSnippet('blocks-won-component.header.reward')}}</th>
-        <th scope="col">{{snippetService.getSnippet('blocks-won-component.header.distributed')}}</th>
+        <th scope="col">State</th>
       </tr>
     </thead>
     <tbody>
