--- a/src/app/payouts/payouts.component.html
+++ b/src/app/payouts/payouts.component.html
@@ -36,11 +36,13 @@
       </span>
         </td>
         <td class="no-wrap">
-          <span (click)="toggleShowPayout(payout)">{{getTotalPayout(payout.transactions)}} {{statsService.ticker$ | async}}</span>
+          <span (click)="toggleShowPayout(payout)" ngbTooltip="{{ratesService.getValuesInFiatFormatted(getTotalPayout(payout.transactions), payout.historicalRate)}}">
+            {{getTotalPayout(payout.transactions)}} {{statsService.ticker$ | async}}
+          </span>
           <span *ngIf="showPayout(payout._id)">
         <span *ngFor="let data of getAddressAmountPairs(payout._id)">
           <br>
-          {{data.address}}: {{data.amount}} {{statsService.ticker$ | async}}
+          {{data.address}}: <span ngbTooltip="{{ratesService.getValuesInFiatFormatted(data.amount, payout.historicalRate)}}">{{data.amount}} {{statsService.ticker$ | async}}</span>
         </span>
       </span>
         </td>
