Rename to "Value"

--- a/src/app/farmer-payout-history/farmer-payout-history.component.html
+++ b/src/app/farmer-payout-history/farmer-payout-history.component.html
@@ -22,8 +22,8 @@
             </th>
             <th scope="col">{{snippetService.getSnippet('payouts-component.headers.transaction')}}</th>
             <th scope="col">{{snippetService.getSnippet('payouts-component.headers.amount')}}</th>
-            <th scope="col">Fiat Amount (Now)</th>
-            <th scope="col">Fiat Amount (At receipt)</th>
+            <th scope="col">Value (Now)</th>
+            <th scope="col">Value (At receipt)</th>
             <th scope="col">{{snippetService.getSnippet('payouts-component.headers.state')}}</th>
           </tr>
         </thead>
