--- a/src/app/payouts/payouts.component.html
+++ b/src/app/payouts/payouts.component.html
@@ -20,7 +20,7 @@
           <app-loading-state></app-loading-state>
         </td>
       </tr>
-      <tr *ngIf="recentPayouts.length === 0">
+      <tr *ngIf="(statsService.recentPayouts$ | async) !== null && recentPayouts.length === 0">
         <td colspan="4" style="text-align: center; padding-top: 1rem">
           <app-empty-state [text]="snippetService.getSnippet('payouts-component.no-payouts-sent-yet')" [icon]="faMoneyCheck"></app-empty-state>
         </td>
