--- a/src/app/settings-modal/settings-modal.component.html
+++ b/src/app/settings-modal/settings-modal.component.html
@@ -25,6 +25,12 @@
               <app-update-block-settings></app-update-block-settings>
             </ng-template>
           </li>
+          <li ngbNavItem="rewards" [destroyOnHide]="true">
+            <a class="text-decoration-none" ngbNavLink>Rewards</a>
+            <ng-template ngbNavContent>
+              <app-update-reward-settings></app-update-reward-settings>
+            </ng-template>
+          </li>
           <li ngbNavItem="difficulty" [destroyOnHide]="true">
             <a class="text-decoration-none" ngbNavLink>Difficulty</a>
             <ng-template ngbNavContent>
