--- a/src/styles.scss
+++ b/src/styles.scss
@@ -127,7 +127,8 @@ body {
   border-color: var(--table-border-color);
   background-color: var(--background-color);
   color: var(--text-color);
-  padding: 0.75rem;
+  padding-top: 0.75rem;
+  padding-bottom: 0.75rem;
 }
 a {
   text-decoration: none;
