Add DR reference to info

--- a/src/app/info/info.component.html
+++ b/src/app/info/info.component.html
@@ -27,6 +27,9 @@
           {{snippetService.getSnippet('info-component.pool-info.block-split-info')}}
         </li>
         <li>
+          Supports solo farming with DR 100-0
+        </li>
+        <li>
           {{snippetService.getSnippet('info-component.pool-info.pplns-info', historicalTimeInHours)}}
         </li>
         <li>
