Add rewards tab

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-xl sticky-navbar" [ngClass]="navbarClasses">
   <a class="navbar-brand text-decoration-none">
-    <img ngSrc="https://static.foxypool.io/assets/icon/fox.svg" width="34" height="34" alt="">
+    <img ngSrc="https://static.foxypool.io/assets/icon/fox.svg" width="34" height="34" alt="" [priority]="true">
     <span class="pool-title">{{poolTitle}}</span>
   </a>
   <button class="navbar-toggler" type="button" (click)="toggleMenuCollapse()">
