--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -3,7 +3,7 @@
 <footer>
   <div style="display: flex; justify-content: center; flex-wrap: wrap">
     <div style="padding-right: 1em; padding-top: 0.8rem; text-align: center;" class="footer-logo">
-      <img ngSrc="https://static.foxypool.io/assets/icon/fox.svg" width="70" height="70" alt="">
+      <img ngSrc="https://static.foxypool.io/assets/icon/fox.svg" width="70" height="70" alt="" [priority]="true">
       <br>
       <span style="font-weight: 300;font-size: 2em;">Foxy</span>
     </div>
