Add partials per hour chart in partials tab

--- a/src/app/farmer-partials/farmer-partials.component.scss
+++ b/src/app/farmer-partials/farmer-partials.component.scss
@@ -1,3 +1,6 @@
+.farmer-partials-per-hour-chart {
+  height: 15rem;
+}
 ::ng-deep .page-link {
   background-color: var(--page-link-background-color);
   border-color: var(--page-link-border-color);
