--- a/src/app/farmer-partials/farmer-partials.component.html
+++ b/src/app/farmer-partials/farmer-partials.component.html
@@ -1,4 +1,4 @@
-<div class="row mb-2">
+<div class="row mb-2" *ngIf="hasPartialsPerHour">
   <div class="col-md-12">
     <div echarts [options]="partialsPerHourChartOptions" [merge]="partialsPerHourChartUpdateOptions" theme="default" class="farmer-partials-per-hour-chart"></div>
   </div>
