--- a/src/app/update-notification-settings/update-notification-settings.component.html
+++ b/src/app/update-notification-settings/update-notification-settings.component.html
@@ -10,7 +10,7 @@
           </label>
         </div>
       </label>
-      <div class="input-group">
+      <div class="input-group has-validation">
         <input
           type="number"
           class="form-control"
@@ -44,7 +44,7 @@
           </label>
         </div>
       </label>
-      <div class="input-group">
+      <div class="input-group has-validation">
         <input
           type="number"
           class="form-control"
