--- a/src/app/my-farmer/my-farmer.component.html
+++ b/src/app/my-farmer/my-farmer.component.html
@@ -1,8 +1,15 @@
 <div class="row">
   <div class="col-12" *ngIf="(accountService.haveAccountIdentifier$ | async) === false">
     <div class="d-flex justify-content-center">
-      <input type="text" class="form-control input-field" placeholder="{{accountIdentifierInputPlaceholder}}" [(ngModel)]="accountIdentifierInput" style="width: 32em;margin-right: 0.5rem;">
-      <button class="btn btn-success" style="margin-left: 0.5rem;" (click)="login()">
+      <input
+        type="text"
+        class="form-control input-field"
+        style="width: 32em;margin-right: 0.5rem;"
+        [placeholder]="accountIdentifierInputPlaceholder"
+        [(ngModel)]="accountIdentifierInput"
+        (keyup.enter)="login()"
+      >
+      <button class="btn btn-success" style="margin-left: 0.5rem;" (click)="login()" [disabled]="!accountIdentifierInput">
         <fa-icon *ngIf="accountService.isLoading$ | async" [icon]="faCircleNotch" animation="spin"></fa-icon>
         <span *ngIf="accountService.isLoading$ | async"> {{snippetService.getSnippet('my-farmer-component.login-button.label-logging-in')}}</span>
         <span *ngIf="(accountService.isLoading$ | async) === false">{{snippetService.getSnippet('my-farmer-component.login-button.label')}}</span>
