Limit diff to 750k

--- a/src/app/update-difficulty/update-difficulty.component.html
+++ b/src/app/update-difficulty/update-difficulty.component.html
@@ -44,7 +44,7 @@
       [(ngModel)]="newDifficulty"
     >
     <div id="difficultyFeedback" class="invalid-feedback">
-      The difficulty must be an integer number greater or equal to 1.
+      The difficulty must be an integer number greater or equal to 1 and less than 750k.
     </div>
   </div>
 </div>
