Fix missing theme text color switch

--- a/src/app/authentication-modal/authentication-modal.component.html
+++ b/src/app/authentication-modal/authentication-modal.component.html
@@ -31,7 +31,7 @@
           <div [innerHTML]="snippetService.getSnippet('authentication-modal.authentication-info', statsService.coinConfig.cliCommandPrefix, statsService.coinConfig.hdKeyPoolPublicKeyPath, message)"></div>
         </div>
       </div>
-      <div class="col-12 text-color">
+      <div class="col-12 settings-modal-text">
         <span [innerHTML]="snippetService.getSnippet('authentication-modal.authentication-guide', docsAuthenticationGuideUrl)"></span>
       </div>
     </div>
