--- a/src/app/leave-pool-modal/leave-pool.component.html
+++ b/src/app/leave-pool-modal/leave-pool.component.html
@@ -3,7 +3,7 @@
   <div class="col-12" *ngIf="haveCollateral">
     <div class="form-check checkbox-lg" style="padding-bottom: 1rem">
       <input class="form-check-input" type="checkbox" id="leaveForEverCheckbox" [(ngModel)]="leaveForEver">
-      <label class="form-check-label text-color" for="leaveForEverCheckbox">
+      <label class="form-check-label settings-modal-text" for="leaveForEverCheckbox">
         {{ snippetService.getSnippet('leave-pool-modal.leave-forever') }}
       </label>
     </div>
