--- a/src/app/farmer-won-blocks/farmer-won-blocks.component.html
+++ b/src/app/farmer-won-blocks/farmer-won-blocks.component.html
@@ -32,18 +32,19 @@
             </th>
             <th scope="col">{{snippetService.getSnippet('blocks-won-component.header.height')}}</th>
             <th scope="col">{{snippetService.getSnippet('blocks-won-component.header.effort')}}</th>
-            <th>Farmer Reward</th>
+            <th scope="col">Farmer Reward</th>
+            <th scope="col"><span ngbTooltip="The time it took your farm from receiving the signage point till a block was created">Farm Time</span></th>
             <th scope="col">Remarks</th>
           </tr>
         </thead>
         <tbody>
           <tr *ngIf="isLoading && (hasWonBlocksObservable | async) === false">
-            <td colspan="5" style="text-align: center">
+            <td colspan="6" style="text-align: center">
               <app-loading-state></app-loading-state>
             </td>
           </tr>
           <tr *ngIf="!isLoading && (hasWonBlocksObservable | async) === false">
-            <td colspan="5" style="text-align: center; padding-top: 1rem">
+            <td colspan="6" style="text-align: center; padding-top: 1rem">
               <app-empty-state [text]="snippetService.getSnippet('blocks-won-component.no-blocks-won-yet')" [icon]="faCubes"></app-empty-state>
             </td>
           </tr>
@@ -57,6 +58,8 @@
                 {{getFarmerRewardFormatted(block)}}
               </span>
             </td>
+            <td *ngIf="block.farmTimeInSeconds === undefined">N/A</td>
+            <td *ngIf="block.farmTimeInSeconds !== undefined"><span [ngStyle]="{color: getFarmTimeColor(block.farmTimeInSeconds)}">{{formatFarmTime(block.farmTimeInSeconds)}} sec</span></td>
             <td *ngIf="block.remarks === undefined || block.remarks.length === 0">
               <span class="badge remark-pill background-color-light-green">OK</span>
             </td>
